--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,6 @@ find_package(nlohmann_json 3.2.0 REQUIRED)
 add_executable(main main.cpp)
 
 target_link_libraries(main PRIVATE nlohmann_json::nlohmann_json)
+
+add_subdirectory (lib)
+add_subdirectory (src)
