Modify many CMakeLists to allow CMake to succeed
Follow the instructions in lib/json/CMakeLists.txt if you want to use
nlohmann_json in your own code.

--- a/lib/json/CMakeLists.txt
+++ b/lib/json/CMakeLists.txt
@@ -1,2 +1,8 @@
-add_subdirectory(include)
-add_subdirectory(src)
+add_library (jsonValidator ./src/jsonvalidator.cpp ./include/jsonvalidator.h)
+add_library (jsonDSL ./src/jsonDSL.cpp ./include/jsonDSL.h)
+target_link_libraries(jsonValidator nlohmann_json)
+target_link_libraries(jsonDSL nlohmann_json)
+
+# if you want to add a new library (for example, jsonParser) that uses nlohmann_json,
+# then add the line { target_link_libraries(jsonParser nlohmann_json) } to the CMakeLists.txt that adds the library
+# and add a { #include "json.hpp" } to the header file of the library
