--- a/lib/nlohmann_json/CMakeLists.txt
+++ b/lib/nlohmann_json/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(JSON_BuildTests OFF CACHE INTERNAL "")
+
 add_library(nlohmann_json ./include/json.hpp)
 
 target_include_directories(nlohmann_json PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> PUBLIC $<INSTALL_INTERFACE:include>)
