--- a/tools/gameServer/src/CMakeLists.txt
+++ b/tools/gameServer/src/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(GameServer GameServer.cpp ../include/GameServer.h)
 target_include_directories(GameServer
     PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     PUBLIC $<INSTALL_INTERFACE:include>)
+target_link_libraries(GameServer networking)
 target_link_libraries(GameServer nlohmann_json)
 
 add_library(SessionManager SessionManager.cpp ../include/SessionManager.h)
