Update and fix Utils cpp and h and add CMake file

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_subdirectory(nlohmann_json)
 add_subdirectory(networking)
-#add_subdirectory(utils) # add a CMakeLists.txt to ./utils/ or else this will fail
+add_subdirectory(utils)
 add_subdirectory(json)
