--- a/lib/json/CMakeLists.txt
+++ b/lib/json/CMakeLists.txt
@@ -16,6 +16,12 @@ target_include_directories(specificationValidator
     PUBLIC $<INSTALL_INTERFACE:include>)
 target_link_libraries(specificationValidator nlohmann_json jsonDSL)
 
+add_library (configValidator ./src/configValidator.cpp ./include/fieldValidators.h)
+target_include_directories(configValidator
+    PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    PUBLIC $<INSTALL_INTERFACE:include>)
+target_link_libraries(configValidator nlohmann_json jsonDSL)
+
 
 # if you want to add a new library (for example, jsonParser) that uses nlohmann_json,
 # then add the line { target_link_libraries(jsonParser nlohmann_json) } to the CMakeLists.txt that adds the library
