Add some code and util helper for loading server config

--- a/lib/utils/CMakeLists.txt
+++ b/lib/utils/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(Utils ./include/Utils.h ./include/Utils.cpp)
+add_library(Utils ./include/Utils.h ./src/Utils.cpp)
 target_include_directories(Utils
     PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     PUBLIC $<INSTALL_INTERFACE:include>)
