--- a/tools/gameServer/CMakeLists.txt
+++ b/tools/gameServer/CMakeLists.txt
@@ -1,5 +1,3 @@
-add_executable(server src/main.cpp)
-
 add_library(GameServer src/GameServer.cpp include/GameServer.h)
 add_library(MessageType src/MessageType.cpp include/MessageType.h)
 add_library(SessionManager src/SessionManager.cpp include/SessionManager.h)
@@ -8,7 +6,7 @@ add_library(session src/session.cpp include/session.h)
 target_include_directories(GameServer
     PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     PUBLIC $<INSTALL_INTERFACE:include>)
-target_link_libraries(GameServer networking MessageType SessionManager)
+target_link_libraries(GameServer networking MessageType SessionManager nlohmann_json Utils)
 
 target_include_directories(MessageType
     PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -23,3 +21,6 @@ target_link_libraries(SessionManager session)
 target_include_directories(session
     PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     PUBLIC $<INSTALL_INTERFACE:include>)
+
+add_executable(server src/main.cpp)
+target_link_libraries(server GameServer)
