Add Utils function for reading a game json
Also add WIP code to GameServer for handling special messages

--- a/lib/utils/CMakeLists.txt
+++ b/lib/utils/CMakeLists.txt
@@ -5,6 +5,6 @@ add_library(Utils ./include/Utils.h ./src/Utils.cpp)
 target_include_directories(Utils
     PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     PUBLIC $<INSTALL_INTERFACE:include>)
-target_link_libraries(Utils ${Boost_LIBRARIES})
+target_link_libraries(Utils ${Boost_LIBRARIES} nlohmann_json)
 
 
