--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(nlohmann_json)
 add_subdirectory(networking)
 add_subdirectory(utils)
 add_subdirectory(json)
+add_subdirectory(abseil-cpp)
