add validate function

--- a/lib/json/CMakeLists.txt
+++ b/lib/json/CMakeLists.txt
@@ -1,9 +1,3 @@
-add_library (jsonValidator ./src/jsonvalidator.cpp ./include/jsonvalidator.h)
-target_include_directories(jsonValidator
-    PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    PUBLIC $<INSTALL_INTERFACE:include>)
-target_link_libraries(jsonValidator nlohmann_json)
-
 add_library (jsonDSL ./src/jsonDSL.cpp ./include/jsonDSL.h)
 target_include_directories(jsonDSL
     PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -35,6 +29,12 @@ target_include_directories(configValidator
     PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     PUBLIC $<INSTALL_INTERFACE:include>)
 target_link_libraries(configValidator nlohmann_json jsonDSL ruleValidator)
+
+add_library (jsonValidator ./src/jsonvalidator.cpp ./include/jsonvalidator.h)
+target_include_directories(jsonValidator
+    PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    PUBLIC $<INSTALL_INTERFACE:include>)
+target_link_libraries(jsonValidator nlohmann_json specificationValidator)
 
 # if you want to add a new library (for example, jsonParser) that uses nlohmann_json,
 # then add the line { target_link_libraries(jsonParser nlohmann_json) } to the CMakeLists.txt that adds the library
