add function to check if a string expression is valid bool

--- a/lib/json/CMakeLists.txt
+++ b/lib/json/CMakeLists.txt
@@ -16,7 +16,7 @@ add_library (variableValidator ./src/variableValidator.cpp ./include/fieldValida
 target_include_directories(variableValidator
     PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     PUBLIC $<INSTALL_INTERFACE:include>)
-target_link_libraries(variableValidator nlohmann_json jsonDSL)
+target_link_libraries(variableValidator nlohmann_json jsonDSL absl::strings)
 
 add_library (ruleValidator ./src/ruleValidator.cpp ./include/fieldValidators.h)
 target_include_directories(ruleValidator
