--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,5 +1,5 @@
+add_subdirectory(abseil-cpp)
 add_subdirectory(nlohmann_json)
 add_subdirectory(networking)
 add_subdirectory(utils)
 add_subdirectory(json)
-# add_subdirectory(abseil-cpp)
