Replaced string literals with PMConstants or ProcessConstants

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(runAllTests
   Dummy.cpp # This file is a placeholder and tests nothing.
 
   UserTest.cpp
+  GameClientTest.cpp
   GameServerTest.cpp
   GameServerConfigTest.cpp
   ValidatorTest.cpp
@@ -18,6 +19,6 @@ add_executable(runAllTests
 target_include_directories(runAllTests PUBLIC ${CMAKE_SOURCE_DIR}/lib/json/include)
 target_link_libraries(runAllTests gmock gtest gtest_main nlohmann_json)
 target_link_libraries(runAllTests configValidator specificationValidator ruleValidator)
-target_link_libraries(runAllTests User networking GameServer ParsedMessage Session SessionManager engine)
+target_link_libraries(runAllTests User utils networking GameServer ParsedMessage Session SessionManager engine)
 
 add_test(NAME AllTests COMMAND runAllTests)
