add unit tests and fix bugs for variableHelper

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,10 +14,11 @@ add_executable(runAllTests
   SessionTest.cpp
   SessionManagerTest.cpp
   Engine.cpp
+  VariableHelperTest.cpp
 )
 target_include_directories(runAllTests PUBLIC ${CMAKE_SOURCE_DIR}/lib/json/include)
 target_link_libraries(runAllTests gmock gtest gtest_main nlohmann_json)
-target_link_libraries(runAllTests configValidator specificationValidator ruleValidator)
+target_link_libraries(runAllTests configValidator specificationValidator ruleValidator variableValidator variableHelper)
 target_link_libraries(runAllTests User networking GameServer ParsedMessage Session SessionManager engine)
 
 add_test(NAME AllTests COMMAND runAllTests)
