Simple test file in attempt to test Timer rule

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,7 +1,7 @@
 
 CC := g++
 CFLAGS := -std=c++17 -w
-TARGET := engine_arith engine_test json_convert_test rules_struct_test rules_impl rules_impl2
+TARGET := engine_arith engine_test json_convert_test rules_struct_test rules_impl rules_impl2 timer_test
 
 ENGINE_CPP := engine_test.cpp ../tools/gameServer/src/engine.cpp
 ENGINE_INCLUDE := ../tools/gameServer/include/ ../lib/nlohmann_json/include/ ../lib/json/include/
@@ -17,6 +17,8 @@ ENGINE_ARITH_CPP := engine_arith.cpp
 RULES_IMPL_CPP := rules_impl_test.cpp ../tools/gameServer/src/player.cpp
 
 RULES_IMPL_2_CPP := rules_impl_test_2.cpp
+
+TIMER_TEST_CPP := timer_test.cpp
 
 # all dir for headers, might not work if there are duplicate header file names
 # use if lazy 
@@ -34,6 +36,9 @@ rules_impl:
 
 rules_impl2:
 	$(CC) $(CFLAGS) $(RULES_IMPL_2_CPP) -o $(word 6, $(TARGET))
+
+timer_test:
+	$(CC) $(CFLAGS) $(TIMER_TEST_CPP) -o $(word 6, $(TARGET))
 
 # engine_arith:
 # 	$(CC) $(CFLAGS) $(ENGINE_ARITH_CPP) -o $(word 1, $(TARGET)) 
